# vaspflow

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  cli.py  config_example.json  input.toml  pyproject.toml  setup.cfg
config/: job_templates.toml
eband/: vasp_eband.py
eledos/: vasp_eledos.py
fermisurface/: vasp_fermisurface.py
pipelines/: base.py  defaults.py  electronic_properties.py  md.py  phonon_properties.py  relax.py  utils.py
qeflow/: input.toml
qeflow/eband/: qe_eband.py  qe_process_eband.py
qeflow/eledos/: qe_eledos.py  qe_process_dos.py
qeflow/nscf/: qe_nscf.py
qeflow/scf/: qe_scf.py
scf/: vasp_scf.py
tests/: inputqe.toml  inputvasp.toml  inputw90post.toml
tests/qe_nscf/: nscf.in  run_qe.sh
tests/qe_scf/: .scf.in.swp  run_qe.sh  scf.in
tests/vasp_cohp/: INCAR
tests/vasp_cohp/Si_O_1.5_2.5/: KPOINTS  POSCAR  POTCAR  WAVECAR  lobsterin
tests/vasp_eband/: HIGH_SYMMETRY_POINTS  INCAR  KPOINTS  PRIMCELL.vasp  SYMMETRY  run_vasp.sh
tests/vasp_eledos/: CHGCAR  INCAR  WAVECAR
tests/vasp_fermisurface/: INCAR
tests/vasp_scf/: INCAR  KPOINTS  POSCAR  POTCAR
utils/: job.py
vaspflow/: input.toml  vaspflow_overview.pptx
vaspflow/charge/: vasp_charge.py  vasp_charge_diff.py
vaspflow/cohp/: vasp_cohp.py
vaspflow/eband/: vasp_eband.py
vaspflow/eledos/: vasp_eledos.py
vaspflow/fermisurface/: vasp_fermisurface.py
vaspflow/locpot/: vasp_process_locpot.py
vaspflow/opt/: vasp_opt.py
vaspflow/scf/: vasp_scf.py
wannier90flow/: README.md  input.toml  prepare_wannier90.py  sample_wannier90.toml  wannier90_plot.py  wannier_init.py  wannier_post.py  wannier_window.py
