[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dftflow"
version = "0.1.0"
description = "A collection of DFT calculation workflow automation scripts."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "toml; python_version < '3.11'",
    "numpy",
]

[project.optional-dependencies]
analysis = [
    "pymatgen",
]

[project.scripts]
vasp_scf = "vaspflow.scf.vasp_scf:main"
vasp_eband = "vaspflow.eband.vasp_eband:main"
vasp_eledos = "vaspflow.eledos.vasp_eledos:main"
vasp_fermi = "vaspflow.fermisurface.vasp_fermisurface:main"
vasp_cohp = "vaspflow.cohp.vasp_cohp:main"
vasp_lobster = "vaspflow.cohp.vasp_process_cohp:main"
qe_scf = "qeflow.scf.qe_scf:main"
qe_nscf = "qeflow.nscf.qe_nscf:main"
wannier90_prepare = "wannier90flow.prepare_wannier90:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["*flow*"]}}
