[metadata]
name = vaspflow
version = 0.1.0
description = VASP automation pipelines and CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = vaspflow maintainers
license = Proprietary

[options]
python_requires = >=3.11
py_modules = vasp_cli_entry
packages =
    vasp
    vasp.analysis
    vasp.config
    vasp.utils
    vasp.scheduler
    vasp.io
    vasp.io.readers
    vasp.io.readers.vasptools
    vasp.io.writers
    vasp.pipelines
    vasp.workflows
package_dir =
    vasp = .
include_package_data = True
install_requires =
    numpy>=1.24
    matplotlib>=3.8
    ase>=3.22
    spglib>=2.0.0
    pymatgen>=2024.5

[options.package_data]
vasp =
    config/job_templates.toml

[options.entry_points]
console_scripts =
    vasp = vasp_cli_entry:main
    vaspflow = vasp_cli_entry:main
